完成预约服务页面以及优化购买流程

--- a/app/src/main/res/layout/item_shopcart.xml
+++ b/app/src/main/res/layout/item_shopcart.xml
@@ -68,9 +68,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:gravity="center_vertical|end"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
+            <TextView
+                android:textColor="#757575"
+                android:text="铃铛宠物用品店"
+                android:id="@+id/item_shopcart_shopName"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
