--- a/app/src/main/res/layout/activity_service_list.xml
+++ b/app/src/main/res/layout/activity_service_list.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".ui.goods_list.GoodsListActivity">
+    tools:context=".activity.ServiceListActivity">
 
     <LinearLayout
         android:gravity="center_vertical"
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/goodsList_iv_back"
+            android:id="@+id/service_list_iv_back"
             android:layout_marginStart="8dp"
             android:src="@mipmap/ic_back"
             android:layout_width="@dimen/dp30"
@@ -24,10 +24,8 @@
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/goodsList_rv"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
+        android:id="@+id/service_list_rv"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
 </LinearLayout>
