--- a/app/src/main/res/layout/item_goodslist.xml
+++ b/app/src/main/res/layout/item_goodslist.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/goodslist_ll_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
@@ -44,10 +45,10 @@
             <TextView
                 android:id="@+id/goodslist_tv_sales"
                 android:layout_width="match_parent"
-                android:textAlignment="viewEnd"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="已售：22"
+                android:textAlignment="viewEnd"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="12sp"
                 tools:ignore="RtlCompat" />
@@ -76,31 +77,14 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/goodslist_tv_shopName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="铃铛宠物用品店"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="12sp" />
 
-            <TextView
-                android:layout_weight="1"
-                android:id="@+id/goodslist_tv_shopName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="铃铛宠物用品店"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="12sp" />
-            <com.example.wz.lovingpets.widget.NumberPickerView
-                android:id="@+id/goodslist_number_picker"
-                app:editextWidth="26dp"
-                app:individer="@drawable/divider_horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <ImageView
-                android:id="@+id/goodslist_iv_add"
-                android:src="@drawable/ic_add_to_cart"
-                android:layout_width="25dp"
-                android:layout_height="25dp" />
-        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
