完成我的服务、预定服务、查看服务订单

--- a/app/src/main/res/layout/item_server_list.xml
+++ b/app/src/main/res/layout/item_server_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_server_list_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -19,14 +20,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:textSize="16sp"
             android:id="@+id/item_server_list_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="2"
             android:text="猫咪外观设计与美容"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
