--- a/app/src/main/res/layout/nav_bottom.xml
+++ b/app/src/main/res/layout/nav_bottom.xml
@@ -38,8 +38,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:iconHeight="@dimen/nav_bottom_icon_size"
-            app:iconNormal="@drawable/ic_classify"
-            app:iconSelected="@drawable/ic_classify_selected"
+            app:iconNormal="@drawable/ic_shopping_trolley_unselected"
+            app:iconSelected="@drawable/ic_shopping_trolley_selected"
             app:iconWidth="@dimen/nav_bottom_icon_size"
             app:itemText="@string/nav_bottom_2"
             app:itemTextSize="@dimen/nav_bottom_font_size"
@@ -65,8 +65,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:iconHeight="@dimen/nav_bottom_icon_size"
-            app:iconNormal="@drawable/ic_shopping_trolley_unselected"
-            app:iconSelected="@drawable/ic_shopping_trolley_selected"
+            app:iconNormal="@drawable/ic_server"
+            app:iconSelected="@drawable/ic_server_selected"
             app:iconWidth="@dimen/nav_bottom_icon_size"
             app:itemText="@string/nav_bottom_4"
             app:itemTextSize="@dimen/nav_bottom_font_size"
