--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -31,12 +31,14 @@
                     android:src="?attr/mine_bg" />
 
                 <LinearLayout
+                    android:id="@+id/mine_ll_userInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp65"
                     android:gravity="center">
 
                     <ImageView
+                        android:id="@+id/mine_iv_head"
                         android:layout_width="@dimen/dp60"
                         android:layout_height="@dimen/dp60"
                         android:layout_marginStart="@dimen/dp20"
@@ -173,7 +175,7 @@
             </LinearLayout>
 
             <!--分割线-->
-            <ImageView
+            <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
                 android:background="@color/divide_line_color" />
@@ -190,7 +192,7 @@
 
                 <!--宠物资料-->
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
@@ -228,7 +230,7 @@
 
                 <!--购物车-->
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
@@ -247,7 +249,7 @@
                         android:layout_width="@dimen/dp20"
                         android:layout_height="@dimen/dp20"
                         android:layout_margin="@dimen/dp10"
-                        android:src="@drawable/ic_shopping_trolley_unselected" />
+                        android:src="@drawable/ic_shoppingcart" />
 
                     <TextView
                         android:layout_width="0dp"
@@ -263,9 +265,46 @@
                         android:src="@mipmap/ic_right_arrow" />
                 </LinearLayout>
 
+                <!--我的服务-->
+                <!--分割线-->
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/divide_line_color" />
+
+                <LinearLayout
+                    android:id="@+id/ll_my_server"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/dp20"
+                        android:layout_height="@dimen/dp20"
+                        android:layout_margin="@dimen/dp10"
+                        android:src="@drawable/ic_my_server" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="@string/my_server" />
+
+                    <ImageView
+                        android:layout_width="@dimen/dp20"
+                        android:layout_height="@dimen/dp20"
+                        android:layout_margin="5dp"
+                        android:src="@mipmap/ic_right_arrow" />
+                </LinearLayout>
+
                 <!--我的评价-->
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
@@ -302,7 +341,7 @@
 
                 <!--我的收藏-->
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
@@ -339,7 +378,7 @@
 
                 <!--我的地址-->
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
@@ -374,7 +413,7 @@
                         android:src="@mipmap/ic_right_arrow" />
                 </LinearLayout>
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
@@ -393,7 +432,7 @@
                 android:orientation="vertical">
 
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
@@ -430,7 +469,7 @@
 
                 <!--意见反馈-->
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
@@ -467,7 +506,7 @@
 
                 <!--版本检测-->
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
@@ -501,14 +540,14 @@
                         android:src="@mipmap/ic_right_arrow" />
                 </LinearLayout>
                 <!--分割线-->
-                <ImageView
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@color/divide_line_color" />
             </LinearLayout>
 
             <!--分割线-->
-            <ImageView
+            <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp10"
                 android:background="@color/divide10_line_color" />
