集成一个图文混排控件，实现发布帖子、查看帖子、帖子详情、查看帖子评论

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,6 @@
     <color name="color_100">#222222</color>
     <color name="color_109">#ffffffff</color>
     <color name="divider">#999999</color>
+    <color name="rip_color">#BFBFBF</color>
+    <color name="rip_color1">#FFFCF6</color>
 </resources>
