--- a/app/src/main/res/layout/item_collect_theme1.xml
+++ b/app/src/main/res/layout/item_collect_theme1.xml
@@ -1,124 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/item_collect_theme0_root"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingEnd="8dp"
-    android:paddingStart="8dp"
-    android:paddingTop="8dp">
+    android:orientation="horizontal"
+    android:padding="8dp">
 
-    <TextView
-        android:id="@+id/item_collect_theme1_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:text="【M.L.X】呆呆免流3.5版本 专治病危区 江西江苏的试试"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/item_collect_theme1_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:text="昨天有个葫芦丝发了个按键停止应用的破解教程，后来有锁机测试发现没用，值" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp">
-
-        <LinearLayout
-            android:layout_marginTop="4dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/item_collect_theme1_iv1"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="120dp"
-                android:scaleType="centerCrop" />
-
-            <ImageView
-                android:layout_marginStart="8dp"
-                android:id="@+id/item_collect_theme1_iv2"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:scaleType="centerCrop" />
-
-            <ImageView
-                android:layout_marginStart="8dp"
-                android:layout_weight="1"
-                android:id="@+id/item_collect_theme1_iv3"
-                android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:scaleType="centerCrop" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/item_collect_theme1_imgCount"
-            android:text="4图"
-            android:gravity="center"
-            android:textSize="12sp"
-            android:textColor="@android:color/white"
-            android:background="#99000000"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_width="30dp"
-            android:layout_height="18dp">
-
-        </TextView>
-    </RelativeLayout>
+    <ImageView
+        android:id="@+id/item_collect_theme0_iv"
+        android:layout_width="100dp"
+        android:layout_marginEnd="8dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
-        android:layout_marginTop="4dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/item_collect_theme1_author"
-            android:layout_width="0dp"
+            android:id="@+id/item_collect_theme0_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:text="【M.L.X】呆呆免流3.5版本 专治病危区 江西江苏的试试"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/item_collect_theme0_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:text="领银元热狗我某农药一物降一物同一屋檐下我也我我信息学院我" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="作者"
-            android:textSize="12sp" />
+            android:gravity="center_vertical">
 
-        <TextView
-            android:id="@+id/item_collect_theme1_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2018年12月24号"
-            android:textSize="12sp" />
+            <TextView
+                android:id="@+id/item_collect_theme0_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="作者"
+                android:textSize="12sp" />
 
-        <ImageView
-            android:layout_marginStart="3dp"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:src="@drawable/ic_comment" />
+            <TextView
+                android:id="@+id/item_collect_theme0_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2018年12月24号"
+                android:textSize="12sp" />
 
-        <TextView
-            android:layout_marginStart="3dp"
-            android:id="@+id/item_collect_theme1_comment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5683"
-            android:textSize="12sp" />
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_marginStart="3dp"
+                android:src="@drawable/ic_comment" />
 
-        <ImageView
-            android:layout_marginStart="3dp"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_my_collection" />
+            <TextView
+                android:id="@+id/item_collect_theme0_comment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:text="5683"
+                android:textSize="12sp" />
 
-        <TextView
-            android:layout_marginStart="3dp"
-            android:id="@+id/item_collect_theme1_collect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="114"
-            android:textSize="12sp" />
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="3dp"
+                android:src="@drawable/ic_my_collection" />
+
+            <TextView
+                android:id="@+id/item_collect_theme0_collect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:text="114"
+                android:textSize="12sp" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
