--- a/app/src/main/res/layout/item_server_order_comment.xml
+++ b/app/src/main/res/layout/item_server_order_comment.xml
@@ -16,35 +16,35 @@
             android:layout_height="40dp" />
 
         <TextView
-            android:textSize="15sp"
-            android:textColor="#757575"
             android:id="@+id/item_server_comment_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="用户昵称" />
+            android:text="用户昵称"
+            android:textColor="#757575"
+            android:textSize="15sp" />
 
         <LinearLayout
-            android:paddingStart="-1dp"
-            android:paddingEnd="2dp"
             android:id="@+id/item_server_comment_ll_bg"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp20"
             android:layout_marginStart="5dp"
-            android:background="@drawable/age_sex_selector">
+            android:background="@drawable/age_sex_selector"
+            android:paddingEnd="2dp"
+            android:paddingStart="-1dp">
 
             <ImageView
-                android:layout_gravity="center_vertical"
                 android:id="@+id/item_server_comment_sex"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
                 android:src="@drawable/ic_age_male" />
 
             <TextView
                 android:id="@+id/item_server_comment_age"
                 android:layout_width="wrap_content"
-                android:layout_marginTop="-1dp"
                 android:layout_height="20dp"
+                android:layout_marginTop="-1dp"
                 android:text="22"
                 android:textColor="@android:color/white" />
         </LinearLayout>
@@ -56,22 +56,22 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:textSize="12sp"
-            android:textColor="#757575"
             android:id="@+id/item_server_comment_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2018-12-12" />
+            android:text="2018-12-12"
+            android:textColor="#757575"
+            android:textSize="12sp" />
 
         <TextView
-            android:textSize="12sp"
-            android:textColor="#757575"
             android:id="@+id/item_server_comment_star"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="end"
-            android:text="评分：4" />
+            android:text="评分：4"
+            android:textColor="#757575"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
