完成个人信息的修改，登录、退出登录逻辑流程的构建以及修复已知的缺陷

--- a/app/src/main/res/drawable/shape_unread.xml
+++ b/app/src/main/res/drawable/shape_unread.xml
@@ -2,6 +2,6 @@
 <!--底部导航条目的右上角未读消息背景-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="20dp" />
-    <solid android:color="@color/red" />
+    <solid android:color="@color/loginout" />
     <padding android:left="4dp" android:right="4dp" android:top="1dp" android:bottom="1dp"/>
 </shape>
