--- a/app/src/main/res/layout/activity_comment_theme.xml
+++ b/app/src/main/res/layout/activity_comment_theme.xml
@@ -1,9 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.CommentThemeActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/layout_titlebar"/>
+
+    <View
+        android:background="#757575"
+        android:layout_width="match_parent"
+        android:layout_height="1px"/>
+
+    <EditText
+        android:id="@+id/comment_theme_comment"
+        android:layout_marginTop="@dimen/dp10"
+        android:textSize="15sp"
+        android:gravity="top"
+        android:padding="@dimen/dp10"
+        android:hint="请写出你的评论"
+        android:layout_width="match_parent"
+        android:layout_height="160dp" />
+
+    <Button
+        android:id="@+id/comment_theme_commit"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="@dimen/dp10"
+        android:layout_marginTop="@dimen/dp10"
+        android:background="#ffa000"
+        android:text="发布评论"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
+</LinearLayout>
