--- a/app/src/main/res/layout/layout_goods_search.xml
+++ b/app/src/main/res/layout/layout_goods_search.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp30"
     android:layout_margin="8dp"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:background="@drawable/search_background"
     android:gravity="center_vertical"
     android:orientation="horizontal">
