--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="myorange">#f19237</color>
     <color name="white">#ffffff</color>
     <color name="red">#ff0000</color>
+    <color name="loginout">#f03e3e</color>
+
     <color name="selector_grey">#DDDDDD</color>
     //底部导航背景色
     <color name="tab_gb">#ffffff</color>
