--- a/app/src/main/res/layout/item_server_list.xml
+++ b/app/src/main/res/layout/item_server_list.xml
@@ -8,6 +8,7 @@
     android:padding="8dp">
 
     <ImageView
+        android:scaleType="centerCrop"
         android:id="@+id/item_server_list_image"
         android:layout_width="90dp"
         android:layout_height="90dp" />
