--- a/app/src/main/res/layout/layout_goods_search.xml
+++ b/app/src/main/res/layout/layout_goods_search.xml
@@ -19,6 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
+        android:maxLines="1"
+        android:maxLength="20"
+        android:ellipsize="end"
         android:hint="@string/search_hint"
         android:textColor="#b2b2b2"
         android:textSize="15sp" />
